--- a/config/CustomSpawner/overworld/EntityBiomeGroups.cfg
+++ b/config/CustomSpawner/overworld/EntityBiomeGroups.cfg
@@ -11,7 +11,7 @@ biomegroup-defaults {
     S:COFH_BASALZ_DEFAULT <MC|Extreme Hills:MC|Ice Plains:MC|Ice Mountains:MC|Extreme Hills Edge:MC|Extreme Hills+:XL|Ice Wasteland:XL|Mountainous Desert:XL|Red Rock Mountains:XL|Mountain Taiga:XL|Wasteland:XL|Alpine:XL|Extreme Jungle:XL|Glacier>
     S:COFH_BLITZ_DEFAULT <MC|Plains:MC|Desert:MC|DesertHills:MC|Savanna:MC|Savanna Plateau:MC|Mesa:MC|Mesa Plateau F:MC|Mesa Plateau:XL|Meadow:XL|Mountainous Desert:XL|Red Rock Mountains:MOON|MoonBiome:XL|Savanna:XL|Shrubland:XL|Tundra:MC|Sunflower Plains:MC|Desert M:MC|Savanna M:MC|Savanna Plateau M:MC|Mesa (Bryce):MC|Mesa Plateau F M:MC|Mesa Plateau M>
     S:COFH_BLIZZ_DEFAULT <MC|Taiga:MC|FrozenOcean:MC|FrozenRiver:MC|Ice Plains:MC|Ice Mountains:MC|TaigaHills:MC|Cold Beach:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Mega Taiga:MC|Mega Taiga Hills:XL|Ice Wasteland:XL|Mountain Taiga:MOON|MoonBiome:XL|Snow Forest:XL|Snowy Rainforest:XL|Tundra:XL|Alpine:XL|Glacier:MC|Taiga M:MC|Ice Plains Spikes:MC|Cold Taiga M>
-    S:COLD <APPENG|Storage Cell:HL|Alps:HL|Glacier:HL|Snow Mountains:HL|Tall Pine Forest:HL|Tundra:MC|Cold Beach:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Cold Taiga M:MC|FrozenOcean:MC|FrozenRiver:MC|Ice Mountains:MC|Ice Plains:MC|Ice Plains Spikes:MC|Mega Taiga:MC|Mega Taiga Hills:MC|Sky:MC|Snow Island:MC|Taiga:MC|Taiga M:MC|TaigaHills:MOON|MoonBiome>
+    S:COLD <APPENG|Storage Cell:HL|Alps:HL|Glacier:HL|Snow Mountains:HL|Tall Pine Forest:HL|Tundra:MC|Cold Beach:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Cold Taiga M:MC|FrozenOcean:MC|FrozenRiver:MC|Ice Mountains:MC|Ice Plains:MC|Ice Plains Spikes:MC|Mega Taiga:MC|Mega Taiga Hills:MC|Sky:MC|Snow Island:MC|Taiga:MC|Taiga M:MC|TaigaHills:MOON|Moon>
     S:CONIFEROUS <HL|Tall Pine Forest:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Cold Taiga M:MC|Mega Taiga:MC|Mega Taiga Hills:MC|Snow Island:MC|Taiga:MC|Taiga M:MC|TaigaHills>
     S:CRAZYPANTS_WITHERSKELETON_DEFAULT <>
     S:CRICKETCRAFT_SNOWMAN_DEFAULT <>
@@ -66,7 +66,7 @@ biomegroup-defaults {
     S:MUSHROOM <MC|MushroomIsland:MC|MushroomIslandShore>
     S:NETHER <MC|Hell>
     S:OCEAN <HL|Flying Mountains:HL|Flying Mountains:HL|Lake:HL|Lake:HL|Tropical Islands:MC|Deep Ocean:MC|FrozenOcean:MC|Ocean:XL|Green Swamplands>
-    S:PLAINS <APPENG|Storage Cell:HL|Canyon:HL|Desert Island:HL|Desert Mountains:HL|Lowlands:HL|Meadow:HL|Meadow:HL|Outback:HL|Outback:HL|Sahel:HL|Savannah:HL|Savannah:HL|Shrubland:HL|Shrubland:HL|Steppe:HL|Tundra:MC|Mesa (Bryce):MC|Mesa Plateau M:MC|Plains:MC|Savanna:MC|Savanna M:MC|Savanna Plateau:MC|Savanna Plateau M:MC|Sunflower Plains:MC|Valley:MC|Windy Island:MC|Windy Island:MOON|MoonBiome:XL|Meadow:XL|Savanna:XL|Shrubland>
+    S:PLAINS <APPENG|Storage Cell:HL|Canyon:HL|Desert Island:HL|Desert Mountains:HL|Lowlands:HL|Meadow:HL|Meadow:HL|Outback:HL|Outback:HL|Sahel:HL|Savannah:HL|Savannah:HL|Shrubland:HL|Shrubland:HL|Steppe:HL|Tundra:MC|Mesa (Bryce):MC|Mesa Plateau M:MC|Plains:MC|Savanna:MC|Savanna M:MC|Savanna Plateau:MC|Savanna Plateau M:MC|Sunflower Plains:MC|Valley:MC|Windy Island:MC|Windy Island:MOON|Moon:XL|Meadow:XL|Savanna:XL|Shrubland>
     S:PNEUMATICCRAFT_DRONE_DEFAULT <>
     S:PNEUMATICCRAFT_LOGISTICDRONE_DEFAULT <>
     S:POWERCRYSTALS_NETHERORESHELLFISH_DEFAULT <>
