--- a/config/CustomSpawner/asteroids/EntityBiomeGroups.cfg
+++ b/config/CustomSpawner/asteroids/EntityBiomeGroups.cfg
@@ -7,10 +7,10 @@
 biomegroup-defaults {
     S:BEACH <HL|Desert Island:HL|Estuary:MC|Beach:MC|Cold Beach:MC|MushroomIslandShore:MC|Stone Beach:XL|Forested Island>
     S:BONI_DUMMY_DEFAULT <>
-    S:COLD <APPENG|Storage Cell:HL|Alps:HL|Glacier:HL|Snow Mountains:HL|Tall Pine Forest:HL|Tundra:MC|Cold Beach:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Cold Taiga M:MC|FrozenOcean:MC|FrozenRiver:MC|Ice Mountains:MC|Ice Plains:MC|Ice Plains Spikes:MC|Mega Taiga:MC|Mega Taiga Hills:MC|Sky:MC|Snow Island:MC|Taiga:MC|Taiga M:MC|TaigaHills:MICDOODLE8|asteroids>
+    S:COLD <APPENG|Storage Cell:HL|Alps:HL|Glacier:HL|Snow Mountains:HL|Tall Pine Forest:HL|Tundra:MC|Cold Beach:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Cold Taiga M:MC|FrozenOcean:MC|FrozenRiver:MC|Ice Mountains:MC|Ice Plains:MC|Ice Plains Spikes:MC|Mega Taiga:MC|Mega Taiga Hills:MC|Sky:MC|Snow Island:MC|Taiga:MC|Taiga M:MC|TaigaHills>
     S:CONIFEROUS <HL|Tall Pine Forest:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Cold Taiga M:MC|Mega Taiga:MC|Mega Taiga Hills:MC|Snow Island:MC|Taiga:MC|Taiga M:MC|TaigaHills>
     S:CRICKETCRAFT_SNOWMAN_DEFAULT <>
-    S:DEAD <MICDOODLE8|asteroids>
+    S:DEAD <>
     S:DENSE <HL|Autumn Forest:HL|Estuary:HL|Flying Mountains:HL|Forest Island:HL|Rainforest:HL|Tropics:HL|Woodland Mountains:HL|Woodlands:MC|Jungle:MC|Jungle Island:MC|Jungle M:MC|JungleHills:MC|Mega Spruce Taiga:MC|Roofed Forest:MC|Roofed Forest M:MC|Snow Island>
     S:DESERT <>
     S:DRY <HL|Badlands:HL|Canyon:HL|Desert Mountains:HL|Dunes:HL|Mesa:HL|Outback:HL|Sahel:HL|Savannah:HL|Steppe:MC|Desert:MC|Desert M:MC|DesertHills:MC|Hell:MC|Mesa (Bryce):MC|Mesa Plateau F M:MC|Mesa Plateau M:MC|Sky:MICDOODLE8|asteroids>
@@ -66,7 +66,7 @@ biomegroup-defaults {
     S:MUSHROOM <MC|MushroomIsland:MC|MushroomIslandShore>
     S:NETHER <MC|Hell>
     S:OCEAN <HL|Flying Mountains:HL|Flying Mountains:HL|Lake:HL|Lake:HL|Tropical Islands:MC|Deep Ocean:MC|FrozenOcean:MC|Ocean:XL|Green Swamplands>
-    S:PLAINS <APPENG|Storage Cell:HL|Canyon:HL|Desert Island:HL|Desert Mountains:HL|Lowlands:HL|Meadow:HL|Meadow:HL|Outback:HL|Outback:HL|Sahel:HL|Savannah:HL|Savannah:HL|Shrubland:HL|Shrubland:HL|Steppe:HL|Tundra:MC|Mesa (Bryce):MC|Mesa Plateau M:MC|Plains:MC|Savanna:MC|Savanna M:MC|Savanna Plateau:MC|Savanna Plateau M:MC|Sunflower Plains:MC|Valley:MC|Windy Island:MC|Windy Island:XL|Meadow:XL|Savanna:XL|Shrubland>
+    S:PLAINS <APPENG|Storage Cell:HL|Canyon:HL|Desert Island:HL|Desert Mountains:HL|Lowlands:HL|Meadow:HL|Meadow:HL|Outback:HL|Outback:HL|Sahel:HL|Savannah:HL|Savannah:HL|Shrubland:HL|Shrubland:HL|Steppe:HL|Tundra:MC|Mesa (Bryce):MC|Mesa Plateau M:MC|Plains:MC|Savanna:MC|Savanna M:MC|Savanna Plateau:MC|Savanna Plateau M:MC|Sunflower Plains:MC|Valley:MC|Windy Island:MC|Windy Island:MICDOODLE8|asteroids:XL|Meadow:XL|Savanna:XL|Shrubland>
     S:PNEUMATICCRAFT_DRONE_DEFAULT <>
     S:PNEUMATICCRAFT_LOGISTICDRONE_DEFAULT <>
     S:POWERCRYSTALS_NETHERORESHELLFISH_DEFAULT <>
@@ -75,7 +75,7 @@ biomegroup-defaults {
     S:SAVANNA <HL|Mesa:HL|Savannah:MC|Savanna:MC|Savanna M:MC|Savanna Plateau:MC|Savanna Plateau M>
     S:SNOWY <HL|Alps:HL|Alps:HL|Glacier:HL|Glacier:HL|Snow Mountains:HL|Snow Mountains:HL|Tall Pine Forest:HL|Tundra:HL|Tundra:MC|Cold Beach:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Cold Taiga M:MC|FrozenOcean:MC|FrozenRiver:MC|Ice Mountains:MC|Ice Plains:MC|Ice Plains Spikes:MC|Snow Island:XL|Alpine:XL|Glacier:XL|Ice Wasteland:XL|Mountain Taiga:XL|Snow Forest:XL|Snowy Rainforest:XL|Tundra>
     S:SPARSE <HL|Alps:HL|Badlands:HL|Canyon:HL|Cliffs:HL|Desert Island:HL|Lowlands:HL|Outback:HL|Sahel:HL|Shrubland:MC|Extreme Hills+:MC|Mesa Plateau F:MC|Savanna:MC|Savanna M:MC|Savanna Plateau:MC|Savanna Plateau M>
-    S:SPOOKY <MC|Roofed Forest:MC|Roofed Forest M:MICDOODLE8|asteroids>
+    S:SPOOKY <MC|Roofed Forest:MC|Roofed Forest M>
     S:SWAMP <HL|Bog:HL|Bog:HL|Estuary:HL|Estuary:HL|Oasis:MC|Swampland:MC|Swampland M:XL|Green Swamplands>
     S:TCONSTRUCT_CRYSTAL_DEFAULT <>
     S:TCONSTRUCT_EDIBLESLIME_DEFAULT <MC|Plains:MC|Extreme Hills:MC|Forest:MC|Taiga:MC|Swampland:MC|Ice Plains:MC|Ice Mountains:MC|DesertHills:MC|ForestHills:MC|TaigaHills:MC|Extreme Hills Edge:MC|Jungle:MC|JungleHills:MC|JungleEdge:MC|Birch Forest:MC|Birch Forest Hills:MC|Roofed Forest:MC|Cold Taiga:MC|Cold Taiga Hills:MC|Mega Taiga:MC|Mega Taiga Hills:MC|Extreme Hills+:MC|Savanna:MC|Savanna Plateau:XL|Green Swamplands:XL|Ice Wasteland:XL|Redwood Forest:XL|Meadow:XL|Mini Jungle:XL|Mountainous Desert:XL|Red Rock Mountains:XL|Mountain Taiga:XL|Pine Forest:XL|Rainforest:XL|Lush Redwoods:XL|Savanna:XL|Shrubland:XL|Snow Forest:XL|Snowy Rainforest:XL|Temperate Rainforest:XL|Wasteland:XL|Woodlands:XL|Alpine:XL|Autumn Woods:XL|Birch Forest:XL|Extreme Jungle:XL|Forested Hills:XL|Forested Island:XL|Glacier:XL|Green Hills:MC|Taiga M:MC|Swampland M:MC|Jungle M:MC|JungleEdge M:MC|Birch Forest M:MC|Birch Forest Hills M:MC|Roofed Forest M:MC|Cold Taiga M:MC|Savanna M:MC|Savanna Plateau M>
