IE balancing, railcraft ore suppression

--- a/config/DynamicLights_entityClasses.cfg
+++ b/config/DynamicLights_entityClasses.cfg
@@ -3,10 +3,12 @@
 general {
     I:BlueSlime=0
     I:BoltEntity=0
+    I:EntityArmedOre=0
     I:EntityArmorCreeper=0
     I:EntityArrow=0
     I:EntityBabySpider=0
     I:EntityBat=0
+    I:EntityBlaze=0
     I:EntityBlindingEnderman=0
     I:EntityBlitz=0
     I:EntityBlizz=0
@@ -50,6 +52,7 @@ general {
     I:EntityGib=0
     I:EntityGravelCreeper=0
     I:EntityGravityCreeper=0
+    I:EntityHellfish=0
     I:EntityHorse=0
     I:EntityHungrySpider=0
     I:EntityHungryZombie=0
@@ -60,6 +63,7 @@ general {
     I:EntityIsaacBlood=0
     I:EntityIsaacNormal=0
     I:EntityItem=0
+    I:EntityItemFireproof=0
     I:EntityItemFrame=0
     I:EntityJumpingCreeper=0
     I:EntityKomodo=0
@@ -79,6 +83,7 @@ general {
     I:EntityOtherPlayerMP=0
     I:EntityPaleSpider=0
     I:EntityPig=0
+    I:EntityPigZombie=0
     I:EntityPirate=0
     I:EntityPlagueZombie=0
     I:EntityPoisonSkeleton=0
@@ -115,6 +120,7 @@ general {
     I:Entity_SpecialZombie=0
     I:FancyEntityItem=0
     I:GCEntityClientPlayerMP=0
+    I:GCEntityOtherPlayerMP=0
     I:"update Interval"=1000
 }
 
