--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,7 +1,7 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Jan 18 12:41:22 CET 2016
-enableMiddleClick=true
+#Wed Jan 20 08:03:48 CET 2016
+enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
 enableAutoRefill=true
