--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -45,16 +45,16 @@
 
 
 "control setup" {
-    B:"Allow Bedrock Breaker to Break Y=0"=false
+    B:"Allow Bedrock Breaker to Break Y=0"=true
     B:"Allow Bedrock Pickaxe to Harvest Spawners"=true
-    B:"Allow Blast Glass to be Used as TE Hardened Glass"=false
+    B:"Allow Blast Glass to be Used as TE Hardened Glass"=true
     B:"Allow Build Blocking of Some Machines"=false
-    B:"Allow Craftable Bedrock"=true
+    B:"Allow Craftable Bedrock"=false
     B:"Allow EMP"=true
     B:"Allow Frames to move Machines (May cause corruption)"=false
     B:"Allow Gravel Gun PvP"=true
-    B:"Allow Nonstandard Recipe Modifications"=false
-    B:"Allow RC steel to be used in other mods"=false
+    B:"Allow Nonstandard Recipe Modifications"=true
+    B:"Allow RC steel to be used in other mods"=true
     B:"Allow TNT Cannon"=true
     B:"Allow special bedrock tool abilities in automation"=true
     B:"AutoCrafter Lag Profiling And Compensation"=true
@@ -90,15 +90,15 @@
     B:"Hardmode Gravel Gun"=false
     B:"Increased Harvest Level for HSLA"=false
     B:"Instant Woodcutter"=true
-    D:"Iron Ore Density"=1.0
-    B:"Item Pump Spills Items If Dumping To Air"=true
-    B:"Jetpack Requires Jet Fuel"=false
+    D:"Iron Ore Density"=5.0
+    B:"Item Pump Spills Items If Dumping To Air"=false
+    B:"Jetpack Requires Jet Fuel"=true
     B:"Jetpack bypasses allow-flight property"=true
     I:"Liquid Spiller Range, Use Zero to Disable"=16
     B:"Lock enchants on bedrock tools"=true
     B:"Log Block Placement and Removal"=false
     D:"Machine Volume Multiplier"=1.0
-    B:"Machine Warning Alarms"=false
+    B:"Machine Warning Alarms"=true
     I:"Max Aerosolizer Range"=128
     I:"Max Bait Box Mob Count"=256
     I:"Max Bridge Range"=128
@@ -120,9 +120,9 @@
     B:"Run power transfer code on client"=false
     B:"Show Force Fields"=true
     I:"Sonic Borer Range"=512
-    B:"Spawn Mobs When Harvesting Spawners By Hand"=true
+    B:"Spawn Mobs When Harvesting Spawners By Hand"=false
     B:"Spawn XP from Friction Heater"=true
-    B:"Spawn with RC Handbook"=true
+    B:"Spawn with RC Handbook"=false
     I:"Spawner Mob Limit"=128
     I:"Sprinkler Particle Density"=4
     B:"Terraformer Block Editing"=true
