--- a/config/TSteelworks.cfg
+++ b/config/TSteelworks.cfg
@@ -2,7 +2,7 @@
 
 "deep tank" {
     # Specify blocks for additional Deep Tank walls.
-    # Format: modname:blockname@metadata|capacity (the metadata must either be a serie of numbers and/or ranges (like [1-14]) separated by commas. Capacity is the amount of mB per empty block in the tank). 
+    # Format: modname:blockname@metadata|capacity (the metadata must either be a serie of numbers and/or ranges (like [1-14]) separated by commas. Capacity is the amount of mB per empty block in the tank).
     # ex: minecraft:stained_glass@[0-15]|2000 (Note: Each entry must be on a seperate line)
     S:"Additional Glass Blocks" <
         minecraft:glass|10000
@@ -48,7 +48,7 @@ equipables {
 
 "high oven" {
     # Enables High Oven Ducts to suck in items like a hopper
-    B:"Enable Duct Vacuum"=false
+    B:"Enable Duct Vacuum"=true
 
     # Allows the exoflame to boost the High Oven burn time/rate
     B:"Enable botania Exoflame support"=false
@@ -58,7 +58,7 @@ equipables {
 
     # Steam maximum production rate per tick per layer (in mB). Let's not renderTank railcraft's boilers useless, set to 0 to disable steam production
     # 18 is ~2 TE4 steam dynamos with 6 layers
-    I:"Steam rate"=20
+    I:"Steam rate"=40
 
     # 1 in <config> chance of getting Thermal Expansion slag when smelting ores, set to -1 to disable. Active only if TE is present
     I:"TE Slag output chance"=10
@@ -89,7 +89,7 @@ tsteelification {
 
 "world generation" {
     # Allow limestone to generate (usually under rivers and oceans)
-    B:Limestone=true
+    B:Limestone=false
 }
 
 
