--- a/config/iChunUtil_Stats.cfg
+++ b/config/iChunUtil_Stats.cfg
@@ -8,7 +8,7 @@
 
 stats {
     # Don't change this.
-    S:statsData=
+    S:statsData=hAWXgIksOX`.SSMH$2W4
 
     # Don't change this.
     S:statsIdentifier=$iEwDh?*7I,0YHQdhZ2 
